ARROW-7985: [C++] Fix builder capacity check

It should be ok to resize below the current allocated builder capacity,
just not below the current populated length.